--- a/src/DartsScoreboardGames/Components/Pages/Screens/SharedComponents/AddPlayerDialog.razor
+++ b/src/DartsScoreboardGames/Components/Pages/Screens/SharedComponents/AddPlayerDialog.razor
@@ -6,14 +6,16 @@
 @inject PlayerHistoryService PlayerHistoryService
 
 <div>
-    <MudDialog Style="width: 50vw;" >
+    <MudDialog Style="width: 90vw;">
         <DialogContent>
             <MudTabs Elevation="0" Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-6">
                 @if (ExistingPlayers.Any()) {
                     <MudTabPanel Text="Recent">
-                        @foreach (var player in ExistingPlayers) {
-                            <PlayerDisplay Class="mb-5" Player=player OnCrossClick=@(() => RemovePlayer(player)) OnSelect=@(() => AddPlayer(player)) />
-                        }
+                        <div style=" max-height:65vh;overflow-y:auto;">
+                            @foreach (var player in ExistingPlayers) {
+                                <PlayerDisplay Class="mb-5" Player=player OnCrossClick=@(() => RemovePlayer(player)) OnSelect=@(() => AddPlayer(player)) />
+                            }
+                        </div>
                     </MudTabPanel>
                 }
                 <MudTabPanel Text="New Player">
@@ -25,7 +27,7 @@
                                  </MudAvatar>
                             </TitleContent>
                             <ChildContent>
-                                <div class="d-flex flex-row flex-wrap" style="max-width: 50vw;">
+                                <div class="d-flex flex-row flex-wrap" style="max-width: 90vw;">
                                     @foreach (var item in AvatarImageProvider.Avatars) {
                                         <MudAvatar Style="cursor:pointer;" Class="mx-1 mt-3" Size="Size.Medium" @onclick="@(async () => {
                                             NewAvatar = item;
