--- a/src/DartsScoreboardGames/Components/Pages/Screens/SharedComponents/GameCard.razor
+++ b/src/DartsScoreboardGames/Components/Pages/Screens/SharedComponents/GameCard.razor
@@ -8,7 +8,7 @@
     <MudText Align=Align.Center Typo="Typo.h3">@TGame.Name</MudText>
     <MudImage class="mx-auto my-5" Src=@TGame.Logo Height="250" Width="250" />
     <MudText Class="my-5" Align=Align.Center Typo="Typo.body1">@TGame.Description</MudText>
-    <MudButton Variant=Variant.Filled Class="mx-auto" Style="width: 10em" Onclick=@(() => GameStateProvider.SetGameScreen<TGame>()) Disabled=@(GameStateProvider.Players.Count < TGame.PlayerRequirement)>Start Game</MudButton>
+    <MudButton Variant=Variant.Filled Class="mx-auto d-flex d-md-none" Style="width: 10em" Onclick=@(() => GameStateProvider.SetGameScreen<TGame>()) Disabled=@(GameStateProvider.Players.Count < TGame.PlayerRequirement)>Start Game</MudButton>
     <MudText class="mt-5" Align=Align.Center Typo="Typo.caption">@($"{TGame.PlayerRequirement}+ Players")</MudText>
 </MudCard>
 
