--- a/src/DartsScoreboardGames/Components/Pages/Screens/SharedComponents/PlayerDisplay.razor
+++ b/src/DartsScoreboardGames/Components/Pages/Screens/SharedComponents/PlayerDisplay.razor
@@ -1,12 +1,25 @@
 ﻿@using DartsScoreboardGames.Services.Models
 
+<style>
+    .player-name{
+        max-width: 7rem;
+        overflow-wrap: anywhere;
+    }
+
+    @@media screen and (min-width: 960px) {
+        .player-name{
+            min-width: 7rem;
+        }
+    }
+</style>
+
 <div class=@(Class + " d-flex")>
     <MudAvatar Class="my-auto" Size="Size.Large" @onclick=OnSelect Style="cursor: pointer">
         <MudImage Src=@(Player.Avatar)></MudImage>
     </MudAvatar>
-    <MudText Class="my-auto ml-5" Typo="Typo.h5" @onclick=OnSelect Style="cursor: pointer;min-width: 7rem;max-width: 7rem;overflow-wrap: anywhere;">@Player.Name</MudText>
+    <MudText Class="my-auto ml-5 player-name" Typo="Typo.h5" @onclick=OnSelect>@Player.Name</MudText>
     @if (OnCrossClick.HasDelegate) {
-        <MudIconButton Icon="fa-regular fa-xmark" Class="ml-auto" Color="Color.Error" @onclick=OnCrossClick />
+        <MudIconButton Icon="fa-regular fa-xmark" Class="ml-auto d-flex d-md-none" Color="Color.Error" @onclick=OnCrossClick />
     }
 </div>
 
